--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,12 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.25",
+    "@react-navigation/native-stack": "^7.8.6",
+    "@react-navigation/stack": "^7.6.12",
     "expo": "~54.0.27",
     "expo-status-bar": "~3.0.9",
+    "formik": "^2.4.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-svg": "15.12.1"
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-loader-kit": "^4.1.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-svg": "15.12.1",
+    "yup": "^1.7.1"
   },
   "private": true,
   "devDependencies": {
