--- a/FrontEnd/.env
+++ b/FrontEnd/.env
@@ -1,3 +1,2 @@
-supabaseUrl = 'https://uvqwmmavupxmuoppunlx.supabase.co'
-SUPABASE_PUBLIC_KEY = sb_publishable_EaBxZ81vPsiKuiVo8j_l8w_w_T-bHcy
-SUPABASE_SECRET_KEY = sb_secret_8KLwTZd1YJtnIxSh_Obidg_1upsvbmX
+EXPO_PUBLIC_SUPABASE_URL = 'https://uvqwmmavupxmuoppunlx.supabase.co'
+EXPO_PUBLIC_SUPABASE_ANON_KEY = sb_publishable_EaBxZ81vPsiKuiVo8j_l8w_w_T-bHcy
