--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
@@ -25,10 +26,12 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "yup": "^1.7.1"
   },
   "private": true,
   "devDependencies": {
-    "react-native-svg-transformer": "^1.5.2"
+    "react-native-svg-transformer": "^1.5.2",
+    "typescript": "~5.9.2"
   }
 }
