--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,9 +23,11 @@
     "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-loader-kit": "^4.1.0",
+    "react-native-pager-view": "6.9.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-tab-view": "^4.2.2",
     "react-native-url-polyfill": "^3.0.0",
     "yup": "^1.7.1"
   },
